# PySide6WidgetCollection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
example/: examples.py
src/fswidgets/: PlayPushButton.py  __init__.py
src/fswidgets.egg-info/: PKG-INFO  SOURCES.txt
