[project]
name = "fswidgets"
version = "0.0.2"
authors = [
  { name="Christoph Schmidt", email="cschmidt.fs@gmail.com" },
]
description = "Widgest for the flexsensor application, that are shared across the project"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'pyside6', 'rich', 'pyyaml'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.tugraz.at/flexsensor-public/fswidgets"